# El-Destripador-de-PDFs

./: .dockerignore  .gitignore  Dockerfile  README.md  TESTS.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
App/: __init__.py  exceptions.py  main.py
App/api/: __init__.py  exception_handlers.py
App/api/Controllers/: __init__.py  health.py
App/api/Routes/: __init__.py  document.py  router.py
App/config/: __init__.py  settings.py
App/domain/: __init__.py  documento.py  metadata.py
App/infrastructure/: __init__.py
App/models/: __init__.py  documento.py
App/repositories/: __init__.py  documento_repository.py
App/schemas/: __init__.py  document.py
App/services/: __init__.py  documento_service.py
App/utils/: database.py  pdf_processor.py  validators.py
scripts/: import_check.py  verify_health.py
test/: conftest.py  test_models_documento.py  test_repositories_documento_repository.py  test_services_documento_service.py
